parse_nena/parser.out
Grammar:

Rule 0     S' -> text
Rule 1     text -> heading NEWLINES paragraphs
Rule 2     heading -> TITLE NEWLINES attributes
Rule 3     heading -> SPACE TITLE NEWLINES attributes
Rule 4     attributes -> ATTRIBUTE
Rule 5     attributes -> attributes space ATTRIBUTE
Rule 6     paragraphs -> paragraph
Rule 7     paragraphs -> paragraphs NEWLINES paragraph
Rule 8     paragraph -> line
Rule 9     paragraph -> footnotes
Rule 10    paragraph -> paragraph line
Rule 11    footnotes -> footnote
Rule 12    footnotes -> footnotes footnote
Rule 13    footnote -> FOOTNOTE
Rule 14    footnote -> FOOTNOTE space
Rule 15    footnote -> FOOTNOTE NEWLINES
Rule 16    footnote -> FOOTNOTE space NEWLINES
Rule 17    line -> line_id line_elements
Rule 18    line_id -> ( DIGITS ) SPACE
Rule 19    line_elements -> line_element
Rule 20    line_elements -> line_elements line_element
Rule 21    line_element -> comment
Rule 22    line_element -> morphemes_language
Rule 23    line_element -> morphemes_foreign
Rule 24    line_element -> interruption
Rule 25    line_element -> fn_anchor
Rule 26    line_element -> morphemes
Rule 27    morphemes_language -> lang morphemes_foreign
Rule 28    morphemes_language -> lang morphemes_foreign lang
Rule 29    morphemes_language -> lang morphemes_foreign lang trailer
Rule 30    morphemes_language -> lang morphemes_foreign morpheme_trailer lang trailer
Rule 31    lang -> LANG_MARKER
Rule 32    morphemes_foreign -> * letters *
Rule 33    morphemes_foreign -> * letters * trailer
Rule 34    morphemes_foreign -> * morphemes letters *
Rule 35    morphemes_foreign -> * morphemes letters * trailer
Rule 36    comment -> COMMENT
Rule 37    comment -> COMMENT trailer
Rule 38    interruption -> LBRACKET_COMMENT space morphemes ]
Rule 39    interruption -> LBRACKET_COMMENT space morphemes ] trailer
Rule 40    interruption -> LPAREN_COMMENT space morphemes )
Rule 41    interruption -> LPAREN_COMMENT space morphemes ) trailer
Rule 42    morphemes -> morpheme_trailer
Rule 43    morphemes -> morphemes morpheme_trailer
Rule 44    morpheme_trailer -> morpheme_trailer fn_anchor
Rule 45    morpheme_trailer -> morpheme_trailer fn_anchor trailer
Rule 46    morpheme_trailer -> letters
Rule 47    morpheme_trailer -> letters trailer
Rule 48    fn_anchor -> [ ^ DIGITS ]
Rule 49    letters -> LETTER
Rule 50    letters -> letters LETTER
Rule 51    trailer -> HYPHEN
Rule 52    trailer -> space
Rule 53    trailer -> PUNCTUATION
Rule 54    trailer -> trailer space
Rule 55    trailer -> trailer PUNCTUATION
Rule 56    trailer -> trailer linebreak
Rule 57    trailer -> trailer versebreak
Rule 58    space -> SPACE
Rule 59    versebreak -> / / space NEWLINES
Rule 60    versebreak -> / / NEWLINES
Rule 61    versebreak -> / / space
Rule 62    versebreak -> / /
Rule 63    linebreak -> / space NEWLINES
Rule 64    linebreak -> / NEWLINES
Rule 65    linebreak -> / space
Rule 66    linebreak -> /

Unused terminals:

    NEWLINE

Terminals, with rules where they appear:

(                    : 18
)                    : 18 40 41
*                    : 32 32 33 33 34 34 35 35
/                    : 59 59 60 60 61 61 62 62 63 64 65 66
ATTRIBUTE            : 4 5
COMMENT              : 36 37
DIGITS               : 18 48
FOOTNOTE             : 13 14 15 16
HYPHEN               : 51
LANG_MARKER          : 31
LBRACKET_COMMENT     : 38 39
LETTER               : 49 50
LPAREN_COMMENT       : 40 41
NEWLINE              : 
NEWLINES             : 1 2 3 7 15 16 59 60 63 64
PUNCTUATION          : 53 55
SPACE                : 3 18 58
TITLE                : 2 3
[                    : 48
]                    : 38 39 48
^                    : 48
error                : 

Nonterminals, with rules where they appear:

attributes           : 2 3 5
comment              : 21
fn_anchor            : 25 44 45
footnote             : 11 12
footnotes            : 9 12
heading              : 1
interruption         : 24
lang                 : 27 28 28 29 29 30 30
letters              : 32 33 34 35 46 47 50
line                 : 8 10
line_element         : 19 20
line_elements        : 17 20
line_id              : 17
linebreak            : 56
morpheme_trailer     : 30 42 43 44 45
morphemes            : 26 34 35 38 39 40 41 43
morphemes_foreign    : 23 27 28 29 30
morphemes_language   : 22
paragraph            : 6 7 10
paragraphs           : 1 7
space                : 5 14 16 38 39 40 41 52 54 59 61 63 65
text                 : 0
trailer              : 29 30 33 35 37 39 41 45 47 54 55 56 57
versebreak           : 57


state 0

    (0) S' -> . text
    (1) text -> . heading NEWLINES paragraphs
    (2) heading -> . TITLE NEWLINES attributes
    (3) heading -> . SPACE TITLE NEWLINES attributes
    TITLE           shift and go to state 3
    SPACE           shift and go to state 4

    text                           shift and go to state 1
    heading                        shift and go to state 2

state 1

    (0) S' -> text .


state 2

    (1) text -> heading . NEWLINES paragraphs
    NEWLINES        shift and go to state 5


state 3

    (2) heading -> TITLE . NEWLINES attributes
    NEWLINES        shift and go to state 6


state 4

    (3) heading -> SPACE . TITLE NEWLINES attributes
    TITLE           shift and go to state 7


state 5

    (1) text -> heading NEWLINES . paragraphs
    (6) paragraphs -> . paragraph
    (7) paragraphs -> . paragraphs NEWLINES paragraph
    (8) paragraph -> . line
    (9) paragraph -> . footnotes
    (10) paragraph -> . paragraph line
    (17) line -> . line_id line_elements
    (11) footnotes -> . footnote
    (12) footnotes -> . footnotes footnote
    (18) line_id -> . ( DIGITS ) SPACE
    (13) footnote -> . FOOTNOTE
    (14) footnote -> . FOOTNOTE space
    (15) footnote -> . FOOTNOTE NEWLINES
    (16) footnote -> . FOOTNOTE space NEWLINES
    (               shift and go to state 14
    FOOTNOTE        shift and go to state 15

    paragraphs                     shift and go to state 8
    paragraph                      shift and go to state 9
    line                           shift and go to state 10
    footnotes                      shift and go to state 11
    line_id                        shift and go to state 12
    footnote                       shift and go to state 13

state 6

    (2) heading -> TITLE NEWLINES . attributes
    (4) attributes -> . ATTRIBUTE
    (5) attributes -> . attributes space ATTRIBUTE
    ATTRIBUTE       shift and go to state 17

    attributes                     shift and go to state 16

state 7

    (3) heading -> SPACE TITLE . NEWLINES attributes
    NEWLINES        shift and go to state 18


state 8

    (1) text -> heading NEWLINES paragraphs .
    (7) paragraphs -> paragraphs . NEWLINES paragraph
    $end            reduce using rule 1 (text -> heading NEWLINES paragraphs .)
    NEWLINES        shift and go to state 19


state 9

    (6) paragraphs -> paragraph .
    (10) paragraph -> paragraph . line
    (17) line -> . line_id line_elements
    (18) line_id -> . ( DIGITS ) SPACE
    NEWLINES        reduce using rule 6 (paragraphs -> paragraph .)
    $end            reduce using rule 6 (paragraphs -> paragraph .)
    (               shift and go to state 14

    line                           shift and go to state 20
    line_id                        shift and go to state 12

state 10

    (8) paragraph -> line .
    (               reduce using rule 8 (paragraph -> line .)
    NEWLINES        reduce using rule 8 (paragraph -> line .)
    $end            reduce using rule 8 (paragraph -> line .)


state 11

    (9) paragraph -> footnotes .
    (12) footnotes -> footnotes . footnote
    (13) footnote -> . FOOTNOTE
    (14) footnote -> . FOOTNOTE space
    (15) footnote -> . FOOTNOTE NEWLINES
    (16) footnote -> . FOOTNOTE space NEWLINES
    (               reduce using rule 9 (paragraph -> footnotes .)
    NEWLINES        reduce using rule 9 (paragraph -> footnotes .)
    $end            reduce using rule 9 (paragraph -> footnotes .)
    FOOTNOTE        shift and go to state 15

    footnote                       shift and go to state 21

state 12

    (17) line -> line_id . line_elements
    (19) line_elements -> . line_element
    (20) line_elements -> . line_elements line_element
    (21) line_element -> . comment
    (22) line_element -> . morphemes_language
    (23) line_element -> . morphemes_foreign
    (24) line_element -> . interruption
    (25) line_element -> . fn_anchor
    (26) line_element -> . morphemes
    (36) comment -> . COMMENT
    (37) comment -> . COMMENT trailer
    (27) morphemes_language -> . lang morphemes_foreign
    (28) morphemes_language -> . lang morphemes_foreign lang
    (29) morphemes_language -> . lang morphemes_foreign lang trailer
    (30) morphemes_language -> . lang morphemes_foreign morpheme_trailer lang trailer
    (32) morphemes_foreign -> . * letters *
    (33) morphemes_foreign -> . * letters * trailer
    (34) morphemes_foreign -> . * morphemes letters *
    (35) morphemes_foreign -> . * morphemes letters * trailer
    (38) interruption -> . LBRACKET_COMMENT space morphemes ]
    (39) interruption -> . LBRACKET_COMMENT space morphemes ] trailer
    (40) interruption -> . LPAREN_COMMENT space morphemes )
    (41) interruption -> . LPAREN_COMMENT space morphemes ) trailer
    (48) fn_anchor -> . [ ^ DIGITS ]
    (42) morphemes -> . morpheme_trailer
    (43) morphemes -> . morphemes morpheme_trailer
    (31) lang -> . LANG_MARKER
    (44) morpheme_trailer -> . morpheme_trailer fn_anchor
    (45) morpheme_trailer -> . morpheme_trailer fn_anchor trailer
    (46) morpheme_trailer -> . letters
    (47) morpheme_trailer -> . letters trailer
    (49) letters -> . LETTER
    (50) letters -> . letters LETTER
    COMMENT         shift and go to state 30
    *               shift and go to state 33
    LBRACKET_COMMENT shift and go to state 35
    LPAREN_COMMENT  shift and go to state 36
    [               shift and go to state 37
    LANG_MARKER     shift and go to state 38
    LETTER          shift and go to state 39

    line_elements                  shift and go to state 22
    line_element                   shift and go to state 23
    comment                        shift and go to state 24
    morphemes_language             shift and go to state 25
    morphemes_foreign              shift and go to state 26
    interruption                   shift and go to state 27
    fn_anchor                      shift and go to state 28
    morphemes                      shift and go to state 29
    lang                           shift and go to state 31
    morpheme_trailer               shift and go to state 32
    letters                        shift and go to state 34

state 13

    (11) footnotes -> footnote .
    FOOTNOTE        reduce using rule 11 (footnotes -> footnote .)
    (               reduce using rule 11 (footnotes -> footnote .)
    NEWLINES        reduce using rule 11 (footnotes -> footnote .)
    $end            reduce using rule 11 (footnotes -> footnote .)


state 14

    (18) line_id -> ( . DIGITS ) SPACE
    DIGITS          shift and go to state 40


state 15

    (13) footnote -> FOOTNOTE .
    (14) footnote -> FOOTNOTE . space
    (15) footnote -> FOOTNOTE . NEWLINES
    (16) footnote -> FOOTNOTE . space NEWLINES
    (58) space -> . SPACE
  ! shift/reduce conflict for NEWLINES resolved as shift
    FOOTNOTE        reduce using rule 13 (footnote -> FOOTNOTE .)
    (               reduce using rule 13 (footnote -> FOOTNOTE .)
    $end            reduce using rule 13 (footnote -> FOOTNOTE .)
    NEWLINES        shift and go to state 42
    SPACE           shift and go to state 43

    space                          shift and go to state 41

state 16

    (2) heading -> TITLE NEWLINES attributes .
    (5) attributes -> attributes . space ATTRIBUTE
    (58) space -> . SPACE
    NEWLINES        reduce using rule 2 (heading -> TITLE NEWLINES attributes .)
    SPACE           shift and go to state 43

    space                          shift and go to state 44

state 17

    (4) attributes -> ATTRIBUTE .
    SPACE           reduce using rule 4 (attributes -> ATTRIBUTE .)
    NEWLINES        reduce using rule 4 (attributes -> ATTRIBUTE .)


state 18

    (3) heading -> SPACE TITLE NEWLINES . attributes
    (4) attributes -> . ATTRIBUTE
    (5) attributes -> . attributes space ATTRIBUTE
    ATTRIBUTE       shift and go to state 17

    attributes                     shift and go to state 45

state 19

    (7) paragraphs -> paragraphs NEWLINES . paragraph
    (8) paragraph -> . line
    (9) paragraph -> . footnotes
    (10) paragraph -> . paragraph line
    (17) line -> . line_id line_elements
    (11) footnotes -> . footnote
    (12) footnotes -> . footnotes footnote
    (18) line_id -> . ( DIGITS ) SPACE
    (13) footnote -> . FOOTNOTE
    (14) footnote -> . FOOTNOTE space
    (15) footnote -> . FOOTNOTE NEWLINES
    (16) footnote -> . FOOTNOTE space NEWLINES
    (               shift and go to state 14
    FOOTNOTE        shift and go to state 15

    paragraph                      shift and go to state 46
    line                           shift and go to state 10
    footnotes                      shift and go to state 11
    line_id                        shift and go to state 12
    footnote                       shift and go to state 13

state 20

    (10) paragraph -> paragraph line .
    (               reduce using rule 10 (paragraph -> paragraph line .)
    NEWLINES        reduce using rule 10 (paragraph -> paragraph line .)
    $end            reduce using rule 10 (paragraph -> paragraph line .)


state 21

    (12) footnotes -> footnotes footnote .
    FOOTNOTE        reduce using rule 12 (footnotes -> footnotes footnote .)
    (               reduce using rule 12 (footnotes -> footnotes footnote .)
    NEWLINES        reduce using rule 12 (footnotes -> footnotes footnote .)
    $end            reduce using rule 12 (footnotes -> footnotes footnote .)


state 22

    (17) line -> line_id line_elements .
    (20) line_elements -> line_elements . line_element
    (21) line_element -> . comment
    (22) line_element -> . morphemes_language
    (23) line_element -> . morphemes_foreign
    (24) line_element -> . interruption
    (25) line_element -> . fn_anchor
    (26) line_element -> . morphemes
    (36) comment -> . COMMENT
    (37) comment -> . COMMENT trailer
    (27) morphemes_language -> . lang morphemes_foreign
    (28) morphemes_language -> . lang morphemes_foreign lang
    (29) morphemes_language -> . lang morphemes_foreign lang trailer
    (30) morphemes_language -> . lang morphemes_foreign morpheme_trailer lang trailer
    (32) morphemes_foreign -> . * letters *
    (33) morphemes_foreign -> . * letters * trailer
    (34) morphemes_foreign -> . * morphemes letters *
    (35) morphemes_foreign -> . * morphemes letters * trailer
    (38) interruption -> . LBRACKET_COMMENT space morphemes ]
    (39) interruption -> . LBRACKET_COMMENT space morphemes ] trailer
    (40) interruption -> . LPAREN_COMMENT space morphemes )
    (41) interruption -> . LPAREN_COMMENT space morphemes ) trailer
    (48) fn_anchor -> . [ ^ DIGITS ]
    (42) morphemes -> . morpheme_trailer
    (43) morphemes -> . morphemes morpheme_trailer
    (31) lang -> . LANG_MARKER
    (44) morpheme_trailer -> . morpheme_trailer fn_anchor
    (45) morpheme_trailer -> . morpheme_trailer fn_anchor trailer
    (46) morpheme_trailer -> . letters
    (47) morpheme_trailer -> . letters trailer
    (49) letters -> . LETTER
    (50) letters -> . letters LETTER
    (               reduce using rule 17 (line -> line_id line_elements .)
    NEWLINES        reduce using rule 17 (line -> line_id line_elements .)
    $end            reduce using rule 17 (line -> line_id line_elements .)
    COMMENT         shift and go to state 30
    *               shift and go to state 33
    LBRACKET_COMMENT shift and go to state 35
    LPAREN_COMMENT  shift and go to state 36
    [               shift and go to state 37
    LANG_MARKER     shift and go to state 38
    LETTER          shift and go to state 39

    line_element                   shift and go to state 47
    comment                        shift and go to state 24
    morphemes_language             shift and go to state 25
    morphemes_foreign              shift and go to state 26
    interruption                   shift and go to state 27
    fn_anchor                      shift and go to state 28
    morphemes                      shift and go to state 29
    lang                           shift and go to state 31
    morpheme_trailer               shift and go to state 32
    letters                        shift and go to state 34

state 23

    (19) line_elements -> line_element .
    COMMENT         reduce using rule 19 (line_elements -> line_element .)
    *               reduce using rule 19 (line_elements -> line_element .)
    LBRACKET_COMMENT reduce using rule 19 (line_elements -> line_element .)
    LPAREN_COMMENT  reduce using rule 19 (line_elements -> line_element .)
    [               reduce using rule 19 (line_elements -> line_element .)
    LANG_MARKER     reduce using rule 19 (line_elements -> line_element .)
    LETTER          reduce using rule 19 (line_elements -> line_element .)
    (               reduce using rule 19 (line_elements -> line_element .)
    NEWLINES        reduce using rule 19 (line_elements -> line_element .)
    $end            reduce using rule 19 (line_elements -> line_element .)


state 24

    (21) line_element -> comment .
    COMMENT         reduce using rule 21 (line_element -> comment .)
    *               reduce using rule 21 (line_element -> comment .)
    LBRACKET_COMMENT reduce using rule 21 (line_element -> comment .)
    LPAREN_COMMENT  reduce using rule 21 (line_element -> comment .)
    [               reduce using rule 21 (line_element -> comment .)
    LANG_MARKER     reduce using rule 21 (line_element -> comment .)
    LETTER          reduce using rule 21 (line_element -> comment .)
    (               reduce using rule 21 (line_element -> comment .)
    NEWLINES        reduce using rule 21 (line_element -> comment .)
    $end            reduce using rule 21 (line_element -> comment .)


state 25

    (22) line_element -> morphemes_language .
    COMMENT         reduce using rule 22 (line_element -> morphemes_language .)
    *               reduce using rule 22 (line_element -> morphemes_language .)
    LBRACKET_COMMENT reduce using rule 22 (line_element -> morphemes_language .)
    LPAREN_COMMENT  reduce using rule 22 (line_element -> morphemes_language .)
    [               reduce using rule 22 (line_element -> morphemes_language .)
    LANG_MARKER     reduce using rule 22 (line_element -> morphemes_language .)
    LETTER          reduce using rule 22 (line_element -> morphemes_language .)
    (               reduce using rule 22 (line_element -> morphemes_language .)
    NEWLINES        reduce using rule 22 (line_element -> morphemes_language .)
    $end            reduce using rule 22 (line_element -> morphemes_language .)


state 26

    (23) line_element -> morphemes_foreign .
    COMMENT         reduce using rule 23 (line_element -> morphemes_foreign .)
    *               reduce using rule 23 (line_element -> morphemes_foreign .)
    LBRACKET_COMMENT reduce using rule 23 (line_element -> morphemes_foreign .)
    LPAREN_COMMENT  reduce using rule 23 (line_element -> morphemes_foreign .)
    [               reduce using rule 23 (line_element -> morphemes_foreign .)
    LANG_MARKER     reduce using rule 23 (line_element -> morphemes_foreign .)
    LETTER          reduce using rule 23 (line_element -> morphemes_foreign .)
    (               reduce using rule 23 (line_element -> morphemes_foreign .)
    NEWLINES        reduce using rule 23 (line_element -> morphemes_foreign .)
    $end            reduce using rule 23 (line_element -> morphemes_foreign .)


state 27

    (24) line_element -> interruption .
    COMMENT         reduce using rule 24 (line_element -> interruption .)
    *               reduce using rule 24 (line_element -> interruption .)
    LBRACKET_COMMENT reduce using rule 24 (line_element -> interruption .)
    LPAREN_COMMENT  reduce using rule 24 (line_element -> interruption .)
    [               reduce using rule 24 (line_element -> interruption .)
    LANG_MARKER     reduce using rule 24 (line_element -> interruption .)
    LETTER          reduce using rule 24 (line_element -> interruption .)
    (               reduce using rule 24 (line_element -> interruption .)
    NEWLINES        reduce using rule 24 (line_element -> interruption .)
    $end            reduce using rule 24 (line_element -> interruption .)


state 28

    (25) line_element -> fn_anchor .
    COMMENT         reduce using rule 25 (line_element -> fn_anchor .)
    *               reduce using rule 25 (line_element -> fn_anchor .)
    LBRACKET_COMMENT reduce using rule 25 (line_element -> fn_anchor .)
    LPAREN_COMMENT  reduce using rule 25 (line_element -> fn_anchor .)
    [               reduce using rule 25 (line_element -> fn_anchor .)
    LANG_MARKER     reduce using rule 25 (line_element -> fn_anchor .)
    LETTER          reduce using rule 25 (line_element -> fn_anchor .)
    (               reduce using rule 25 (line_element -> fn_anchor .)
    NEWLINES        reduce using rule 25 (line_element -> fn_anchor .)
    $end            reduce using rule 25 (line_element -> fn_anchor .)


state 29

    (26) line_element -> morphemes .
    (43) morphemes -> morphemes . morpheme_trailer
    (44) morpheme_trailer -> . morpheme_trailer fn_anchor
    (45) morpheme_trailer -> . morpheme_trailer fn_anchor trailer
    (46) morpheme_trailer -> . letters
    (47) morpheme_trailer -> . letters trailer
    (49) letters -> . LETTER
    (50) letters -> . letters LETTER
  ! shift/reduce conflict for LETTER resolved as shift
    COMMENT         reduce using rule 26 (line_element -> morphemes .)
    *               reduce using rule 26 (line_element -> morphemes .)
    LBRACKET_COMMENT reduce using rule 26 (line_element -> morphemes .)
    LPAREN_COMMENT  reduce using rule 26 (line_element -> morphemes .)
    [               reduce using rule 26 (line_element -> morphemes .)
    LANG_MARKER     reduce using rule 26 (line_element -> morphemes .)
    (               reduce using rule 26 (line_element -> morphemes .)
    NEWLINES        reduce using rule 26 (line_element -> morphemes .)
    $end            reduce using rule 26 (line_element -> morphemes .)
    LETTER          shift and go to state 39

    morpheme_trailer               shift and go to state 48
    letters                        shift and go to state 34

state 30

    (36) comment -> COMMENT .
    (37) comment -> COMMENT . trailer
    (51) trailer -> . HYPHEN
    (52) trailer -> . space
    (53) trailer -> . PUNCTUATION
    (54) trailer -> . trailer space
    (55) trailer -> . trailer PUNCTUATION
    (56) trailer -> . trailer linebreak
    (57) trailer -> . trailer versebreak
    (58) space -> . SPACE
    COMMENT         reduce using rule 36 (comment -> COMMENT .)
    *               reduce using rule 36 (comment -> COMMENT .)
    LBRACKET_COMMENT reduce using rule 36 (comment -> COMMENT .)
    LPAREN_COMMENT  reduce using rule 36 (comment -> COMMENT .)
    [               reduce using rule 36 (comment -> COMMENT .)
    LANG_MARKER     reduce using rule 36 (comment -> COMMENT .)
    LETTER          reduce using rule 36 (comment -> COMMENT .)
    (               reduce using rule 36 (comment -> COMMENT .)
    NEWLINES        reduce using rule 36 (comment -> COMMENT .)
    $end            reduce using rule 36 (comment -> COMMENT .)
    HYPHEN          shift and go to state 50
    PUNCTUATION     shift and go to state 52
    SPACE           shift and go to state 43

    trailer                        shift and go to state 49
    space                          shift and go to state 51

state 31

    (27) morphemes_language -> lang . morphemes_foreign
    (28) morphemes_language -> lang . morphemes_foreign lang
    (29) morphemes_language -> lang . morphemes_foreign lang trailer
    (30) morphemes_language -> lang . morphemes_foreign morpheme_trailer lang trailer
    (32) morphemes_foreign -> . * letters *
    (33) morphemes_foreign -> . * letters * trailer
    (34) morphemes_foreign -> . * morphemes letters *
    (35) morphemes_foreign -> . * morphemes letters * trailer
    *               shift and go to state 33

    morphemes_foreign              shift and go to state 53

state 32

    (42) morphemes -> morpheme_trailer .
    (44) morpheme_trailer -> morpheme_trailer . fn_anchor
    (45) morpheme_trailer -> morpheme_trailer . fn_anchor trailer
    (48) fn_anchor -> . [ ^ DIGITS ]
  ! shift/reduce conflict for [ resolved as shift
    LETTER          reduce using rule 42 (morphemes -> morpheme_trailer .)
    COMMENT         reduce using rule 42 (morphemes -> morpheme_trailer .)
    *               reduce using rule 42 (morphemes -> morpheme_trailer .)
    LBRACKET_COMMENT reduce using rule 42 (morphemes -> morpheme_trailer .)
    LPAREN_COMMENT  reduce using rule 42 (morphemes -> morpheme_trailer .)
    LANG_MARKER     reduce using rule 42 (morphemes -> morpheme_trailer .)
    (               reduce using rule 42 (morphemes -> morpheme_trailer .)
    NEWLINES        reduce using rule 42 (morphemes -> morpheme_trailer .)
    $end            reduce using rule 42 (morphemes -> morpheme_trailer .)
    ]               reduce using rule 42 (morphemes -> morpheme_trailer .)
    )               reduce using rule 42 (morphemes -> morpheme_trailer .)
    [               shift and go to state 37

    fn_anchor                      shift and go to state 54

state 33

    (32) morphemes_foreign -> * . letters *
    (33) morphemes_foreign -> * . letters * trailer
    (34) morphemes_foreign -> * . morphemes letters *
    (35) morphemes_foreign -> * . morphemes letters * trailer
    (49) letters -> . LETTER
    (50) letters -> . letters LETTER
    (42) morphemes -> . morpheme_trailer
    (43) morphemes -> . morphemes morpheme_trailer
    (44) morpheme_trailer -> . morpheme_trailer fn_anchor
    (45) morpheme_trailer -> . morpheme_trailer fn_anchor trailer
    (46) morpheme_trailer -> . letters
    (47) morpheme_trailer -> . letters trailer
    LETTER          shift and go to state 39

    letters                        shift and go to state 55
    morphemes                      shift and go to state 56
    morpheme_trailer               shift and go to state 32

state 34

    (46) morpheme_trailer -> letters .
    (47) morpheme_trailer -> letters . trailer
    (50) letters -> letters . LETTER
    (51) trailer -> . HYPHEN
    (52) trailer -> . space
    (53) trailer -> . PUNCTUATION
    (54) trailer -> . trailer space
    (55) trailer -> . trailer PUNCTUATION
    (56) trailer -> . trailer linebreak
    (57) trailer -> . trailer versebreak
    (58) space -> . SPACE
  ! shift/reduce conflict for LETTER resolved as shift
    [               reduce using rule 46 (morpheme_trailer -> letters .)
    COMMENT         reduce using rule 46 (morpheme_trailer -> letters .)
    *               reduce using rule 46 (morpheme_trailer -> letters .)
    LBRACKET_COMMENT reduce using rule 46 (morpheme_trailer -> letters .)
    LPAREN_COMMENT  reduce using rule 46 (morpheme_trailer -> letters .)
    LANG_MARKER     reduce using rule 46 (morpheme_trailer -> letters .)
    (               reduce using rule 46 (morpheme_trailer -> letters .)
    NEWLINES        reduce using rule 46 (morpheme_trailer -> letters .)
    $end            reduce using rule 46 (morpheme_trailer -> letters .)
    ]               reduce using rule 46 (morpheme_trailer -> letters .)
    )               reduce using rule 46 (morpheme_trailer -> letters .)
    LETTER          shift and go to state 58
    HYPHEN          shift and go to state 50
    PUNCTUATION     shift and go to state 52
    SPACE           shift and go to state 43

    trailer                        shift and go to state 57
    space                          shift and go to state 51

state 35

    (38) interruption -> LBRACKET_COMMENT . space morphemes ]
    (39) interruption -> LBRACKET_COMMENT . space morphemes ] trailer
    (58) space -> . SPACE
    SPACE           shift and go to state 43

    space                          shift and go to state 59

state 36

    (40) interruption -> LPAREN_COMMENT . space morphemes )
    (41) interruption -> LPAREN_COMMENT . space morphemes ) trailer
    (58) space -> . SPACE
    SPACE           shift and go to state 43

    space                          shift and go to state 60

state 37

    (48) fn_anchor -> [ . ^ DIGITS ]
    ^               shift and go to state 61


state 38

    (31) lang -> LANG_MARKER .
    *               reduce using rule 31 (lang -> LANG_MARKER .)
    HYPHEN          reduce using rule 31 (lang -> LANG_MARKER .)
    PUNCTUATION     reduce using rule 31 (lang -> LANG_MARKER .)
    SPACE           reduce using rule 31 (lang -> LANG_MARKER .)
    COMMENT         reduce using rule 31 (lang -> LANG_MARKER .)
    LBRACKET_COMMENT reduce using rule 31 (lang -> LANG_MARKER .)
    LPAREN_COMMENT  reduce using rule 31 (lang -> LANG_MARKER .)
    [               reduce using rule 31 (lang -> LANG_MARKER .)
    LANG_MARKER     reduce using rule 31 (lang -> LANG_MARKER .)
    LETTER          reduce using rule 31 (lang -> LANG_MARKER .)
    (               reduce using rule 31 (lang -> LANG_MARKER .)
    NEWLINES        reduce using rule 31 (lang -> LANG_MARKER .)
    $end            reduce using rule 31 (lang -> LANG_MARKER .)


state 39

    (49) letters -> LETTER .
    LETTER          reduce using rule 49 (letters -> LETTER .)
    HYPHEN          reduce using rule 49 (letters -> LETTER .)
    PUNCTUATION     reduce using rule 49 (letters -> LETTER .)
    SPACE           reduce using rule 49 (letters -> LETTER .)
    [               reduce using rule 49 (letters -> LETTER .)
    COMMENT         reduce using rule 49 (letters -> LETTER .)
    *               reduce using rule 49 (letters -> LETTER .)
    LBRACKET_COMMENT reduce using rule 49 (letters -> LETTER .)
    LPAREN_COMMENT  reduce using rule 49 (letters -> LETTER .)
    LANG_MARKER     reduce using rule 49 (letters -> LETTER .)
    (               reduce using rule 49 (letters -> LETTER .)
    NEWLINES        reduce using rule 49 (letters -> LETTER .)
    $end            reduce using rule 49 (letters -> LETTER .)
    ]               reduce using rule 49 (letters -> LETTER .)
    )               reduce using rule 49 (letters -> LETTER .)


state 40

    (18) line_id -> ( DIGITS . ) SPACE
    )               shift and go to state 62


state 41

    (14) footnote -> FOOTNOTE space .
    (16) footnote -> FOOTNOTE space . NEWLINES
  ! shift/reduce conflict for NEWLINES resolved as shift
    FOOTNOTE        reduce using rule 14 (footnote -> FOOTNOTE space .)
    (               reduce using rule 14 (footnote -> FOOTNOTE space .)
    $end            reduce using rule 14 (footnote -> FOOTNOTE space .)
    NEWLINES        shift and go to state 63


state 42

    (15) footnote -> FOOTNOTE NEWLINES .
    FOOTNOTE        reduce using rule 15 (footnote -> FOOTNOTE NEWLINES .)
    (               reduce using rule 15 (footnote -> FOOTNOTE NEWLINES .)
    NEWLINES        reduce using rule 15 (footnote -> FOOTNOTE NEWLINES .)
    $end            reduce using rule 15 (footnote -> FOOTNOTE NEWLINES .)


state 43

    (58) space -> SPACE .
    NEWLINES        reduce using rule 58 (space -> SPACE .)
    FOOTNOTE        reduce using rule 58 (space -> SPACE .)
    (               reduce using rule 58 (space -> SPACE .)
    $end            reduce using rule 58 (space -> SPACE .)
    ATTRIBUTE       reduce using rule 58 (space -> SPACE .)
    PUNCTUATION     reduce using rule 58 (space -> SPACE .)
    SPACE           reduce using rule 58 (space -> SPACE .)
    /               reduce using rule 58 (space -> SPACE .)
    COMMENT         reduce using rule 58 (space -> SPACE .)
    *               reduce using rule 58 (space -> SPACE .)
    LBRACKET_COMMENT reduce using rule 58 (space -> SPACE .)
    LPAREN_COMMENT  reduce using rule 58 (space -> SPACE .)
    [               reduce using rule 58 (space -> SPACE .)
    LANG_MARKER     reduce using rule 58 (space -> SPACE .)
    LETTER          reduce using rule 58 (space -> SPACE .)
    ]               reduce using rule 58 (space -> SPACE .)
    )               reduce using rule 58 (space -> SPACE .)


state 44

    (5) attributes -> attributes space . ATTRIBUTE
    ATTRIBUTE       shift and go to state 64


state 45

    (3) heading -> SPACE TITLE NEWLINES attributes .
    (5) attributes -> attributes . space ATTRIBUTE
    (58) space -> . SPACE
    NEWLINES        reduce using rule 3 (heading -> SPACE TITLE NEWLINES attributes .)
    SPACE           shift and go to state 43

    space                          shift and go to state 44

state 46

    (7) paragraphs -> paragraphs NEWLINES paragraph .
    (10) paragraph -> paragraph . line
    (17) line -> . line_id line_elements
    (18) line_id -> . ( DIGITS ) SPACE
    NEWLINES        reduce using rule 7 (paragraphs -> paragraphs NEWLINES paragraph .)
    $end            reduce using rule 7 (paragraphs -> paragraphs NEWLINES paragraph .)
    (               shift and go to state 14

    line                           shift and go to state 20
    line_id                        shift and go to state 12

state 47
